--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
       Administration App
     </title>
+    <link rel="stylesheet" href="dist/styles.css">
   </head>
   <body>
     <div id="app"></div>
