--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
       Administration App
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="dist/styles.css">
   </head>
   <body>
